install/virtualservice.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
spec:
  gateways:
  - istio-gateways/home-mtaylor-io
  hosts:
  - argocd.home.mtaylor.io
  http:
  - name: argocd-routes
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 443
